examples/test/testpolicy4923.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4923
  namespace: namespace336
spec:
  podSelector:
    matchLabels:
      key26: value12
      key3: value28
      key25: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value19
          key45: value11
          key33: value7
      podSelector:
        matchLabels:
          key15: value32
          key1: value27
          key22: value34
